<resources>
    <string name="app_name">ScoutDiary</string>
    <string name="str_vodov_dnevnik">Vodov dnevnik</string>
    <string name="btn_dodaj_vod">Dodaj vod</string>
    <string name="title_activity_edit_group">Leanback EditGroupActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="vpisi_ime_voda">Vpiši ime voda</string>
    <string name="dodaj_clana">Dodaj člana</string>
    <string name="vpisi_ime_clana">Vpiši ime člana</string>
    <string name="dodaj">Dodaj</string>
    <string name="preklici">Prekliči</string>
    <string name="vnesite_ime_clana">Vnesite ime člana</string>
    <string name="shrani">Shrani</string>
    <string name="ime_voda">ime voda</string>
    <string name="gumb_evidenca">Evidenca</string>
    <string name="slika_voda">slika voda</string>
    <string name="slika_sestanka">slika sestanka</string>
    <string name="opis_sestanka">Opis sestanka</string>
    <string name="saved_group_toast">Vod je uspešno shranjen</string>
    <string name="default_group_name">Vod</string>
    <string name="no_name_toast">Prosim napiši ime voda</string>
    <string name="no_img_toast">Prosim izberi sliko</string>
    <string name="vpisi_ime_člana">Vpiši ime člana</string>
    <string name="add_text">Dodaj</string>
    <string name="cancel_text">Prekliči</string>
    <string name="prosim_vpisi_ime_clana">Prosim vpiši ime člana</string>
    <string name="error_saving_group">Couldn\'t save the group</string>
    <string name="prisotnost_shranjena">Prisotnost shranjena!</string>
    <string name="save_attendance">Shrani prisotne</string>
    <string name="btn_arhiv">Arhiv</string>
    <string name="ime_sestanka">Ime sestanka</string>
    <string name="example_date">Četrtek, 2. 5. 24</string>
    <string name="ime_aplikacije">Ime aplikacije</string>
    <string name="moji_vodi">Moji vodi:</string>
    <string name="vod">Vod:</string>
    <string name="clani_voda">Člani voda:</string>
    <string name="dodaj_vod">Dodaj vod</string>
    <string name="izberi_sliko">Izberi sliko</string>
    <string name="tematsko_podrocje">Tematsko\npodročje</string>
    <string name="izberi_tematiko">Izberi tematiko</string>
    <string name="prva_pomoc">Prva pomoč</string>
    <string name="bivanje_v_naravi">Bivanje v naravi</string>
    <string name="orientacija_in_signalizacija">Orientacija in signalizacija</string>
    <string name="tabornistvo">Taborništvo</string>
    <string name="izbire_in_interesne_dejavnosti">Izbirne in interesne dejavnosti</string>
    <string name="slika_ni_bila_izbrana">Slika ni bila izbrana</string>
    <string name="zbrisi">Zbriši</string>
    <string name="meeting_deleted">Sestanek je bil odstranjen</string>
    <string name="meeting_saved">Sestanek je shranjen</string>
</resources>