<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izberi_tematiko"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/default_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_red_flag"
            android:contentDescription="@null"
            android:scaleType="fitCenter"/>

        <CheckBox
            android:id="@+id/checkbox_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prva_pomoc"
            android:textColor="@color/default_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_green_flag"
            android:contentDescription="@null"
            android:scaleType="fitCenter"/>

        <CheckBox
            android:id="@+id/checkbox_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bivanje_v_naravi"
            android:textColor="@color/default_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_blue_flag"
            android:contentDescription="@null"
            android:scaleType="fitCenter"/>

        <CheckBox
            android:id="@+id/checkbox_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientacija_in_signalizacija"
            android:textColor="@color/default_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_purple_flag"
            android:contentDescription="@null"
            android:scaleType="fitCenter"/>

        <CheckBox
            android:id="@+id/checkbox_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabornistvo"
            android:textColor="@color/default_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_orange_flag"
            android:contentDescription="@null"
            android:scaleType="fitCenter"/>

        <CheckBox
            android:id="@+id/checkbox_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/izbire_in_interesne_dejavnosti"
            android:textColor="@color/default_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_flags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shrani"
        android:backgroundTint="@color/default_button"/>
</LinearLayout>
