<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <!-- App Name -->
    <ImageView
        android:id="@+id/main_screen"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/ime_aplikacije"
        android:scaleType="centerCrop"
        android:src="@drawable/main_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/napis_moji_vodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moji_vodi"
        android:textColor="@color/default_text"
        app:layout_constraintTop_toBottomOf="@id/main_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_slika_voda"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/slika_voda"
        android:src="@drawable/add_btn_logo"
        app:layout_constraintEnd_toEndOf="@id/napis_moji_vodi"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/napis_moji_vodi"
        app:strokeColor="@color/default_button"
        app:strokeWidth="0dp" />

    <TextView
        android:id="@+id/ime_voda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/dodaj_vod"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/default_text"
        app:layout_constraintEnd_toEndOf="@id/btn_slika_voda"
        app:layout_constraintStart_toStartOf="@id/btn_slika_voda"
        app:layout_constraintTop_toBottomOf="@id/btn_slika_voda" />

</androidx.constraintlayout.widget.ConstraintLayout>
