<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGroupActivity">

    <!-- App Name -->
    <ImageView
        android:id="@+id/main_screen"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/ime_aplikacije"
        android:scaleType="centerCrop"
        android:src="@drawable/main_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_screen"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_izberi_sliko_voda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_photo"
            app:strokeWidth="10dp"
            app:strokeColor="@color/default_button"/>

        <TextView
            android:id="@+id/text_izberi_sliko_voda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/izberi_sliko"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"/>
    </FrameLayout>

    <TextView
        android:id="@+id/napis_vod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="cursive"
        android:text="@string/vod"
        android:textColor="@color/default_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/frameLayout"
        app:layout_constraintStart_toEndOf="@id/frameLayout"
        app:layout_constraintTop_toTopOf="@id/frameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/napis_vod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/napis_vod"
        app:layout_constraintTop_toTopOf="@id/napis_vod">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextImeVoda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vpisi_ime_voda"
            android:textColor="@color/default_text"
            android:layout_marginEnd="16dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_clani_voda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/clani_voda"
        android:textColor="@color/default_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMembers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_clani_voda"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Button to Add New Member -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dodaj_clana"
        app:icon="@drawable/ic_member"
        app:iconPadding="4dp"
        app:iconTint="@android:color/white"
        app:backgroundTint="@color/default_button"
        app:layout_constraintBottom_toBottomOf="@id/text_clani_voda"
        app:layout_constraintStart_toEndOf="@id/text_clani_voda"
        app:layout_constraintTop_toTopOf="@id/text_clani_voda"
        />

    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/shrani"
        app:backgroundTint="@color/default_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
